# bcfortiapi

./: LICENSE  README.md  pyproject.toml
archive/0.8/: pyproject.toml
archive/0.8/src/bcfortiapi.egg-info/: PKG-INFO  top_level.txt
archive/0.9.1/: LICENSE.txt  README.md  pyproject.toml
archive/0.9.1/src/bcfortiapi.egg-info/: PKG-INFO
archive/0.9.10/: README.md  pyproject.toml
archive/0.9.10/src/bcfortiapi/: __init__.py
archive/0.9.11/: README.md  pyproject.toml
archive/0.9.11/src/bcfortiapi/: __init__.py
archive/0.9.11/src/bcfortiapi.egg-info/: PKG-INFO
archive/0.9.11/tests/: bcfortiapi_test.py
archive/0.9.2/: pyproject.toml
archive/0.9.2/src/bcfortiapi/: __init__.py
archive/0.9.2/src/bcfortiapi.egg-info/: PKG-INFO  requires.txt
archive/0.9.2/src/bcfortiapi/fgt/: fgt.py
archive/0.9.2/src/bcfortiapi/fmg/: fmg.py
archive/0.9.4/src/bcfortiapi.egg-info/: PKG-INFO  SOURCES.txt
archive/0.9.5/: README.md  pyproject.toml
archive/0.9.5/tests/: bcfortiapi_test.py
archive/0.9.6/: README.md  pyproject.toml
archive/0.9.6/src/bcfortiapi/: __init__.py
archive/0.9.7/: README.md  pyproject.toml
archive/0.9.7/src/bcfortiapi/: __init__.py
archive/0.9.7/src/bcfortiapi.egg-info/: PKG-INFO
archive/0.9.8/: README.md  pyproject.toml
archive/0.9.8/src/bcfortiapi/: __init__.py
archive/0.9.8/src/bcfortiapi.egg-info/: SOURCES.txt
archive/0.9.9/: pyproject.toml
latest/bcfortiapi/: README.md  pyproject.toml
src/bcfortiapi/: __init__.py
src/bcfortiapi.egg-info/: PKG-INFO
src/bcfortiapi/fgt/: fgt.py
src/bcfortiapi/fmg/: fmg.py
(+21 files in other folders)
