[build-system]
requires = ["setuptools >= 80.10.2"]
build-backend = "setuptools.build_meta"

[project]
name = "bcfortiapi"
version = "0.9.2"
dependencies = [
    "urllib3>=2.2.1",
    "requests>=2.32.3"
]
requires-python = ">= 3.11"
authors = [
  {name = "Benjamin Court", email = "bmcitconsulting@gmail.com"}
]
maintainers = [
  {name = "Benjamin Court", email = "bmcitconsulting@gmail.com"}
]
description = "A Python library for interacting with the Fortinet FortiGate and FortiManager APIs"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["fortinet", "fortigate", "fgt", "fortimanager", "fmg", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/benjitron81/bcfortiapi"
Issues = "https://github.com/benjitron81/bcfortiapi/issues"
